Bootstrap added. Header and footer updated. Some page contents created. Internationalization texts updated.

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -1,5 +1,17 @@
+header.nav.button.login = Sign in
+
 index.welcome = Welcome to the University News Ulm Web Client!
+index.text.app = The University News Ulm App is available for Android and Windows Phone.
+index.text.app.android = Get the App for Android from the Google Play Store.
+index.button.app.android = Get Android App
+index.text.app.windowsPhone = Get the App for Windows Phone from the Windows Store.
+index.button.app.windowsPhone = Get Windows Phone App
 
 moderators.label.name = Name
 moderators.label.firstName = First name
 moderators.label.lastName = Last name
+
+login.label.heading = Please sign in
+login.label.email = Email address
+login.label.password = Password
+login.button.login = Sign in
