Added login functionality in ModeratorAPI. Fixed Bug getErrorStream in MainAPI. Added controller stuff: The FrontController, the RequestContextManager, Actions and the ActionFactory and a RequestDispatcher. Several actions like GetMyChannelsAction, HomeAction, LoadLoginAction, LoginAction. However, not all of them are properly implemented. Added ServerError data class to be able to handle error responses from REST server. Added exceptions APIException und SessionIsExpiredException. Added some new constants, Added the start up listener which is used to initialize the ActionFactory and the Dispatcher. Moved all jsp files to WEB-INF folder. This is considered good practice.

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -6,12 +6,13 @@ index.text.app.android = Get the App for Android from the Google Play Store.
 index.button.app.android = Get Android App
 index.text.app.windowsPhone = Get the App for Windows Phone from the Windows Store.
 index.button.app.windowsPhone = Get Windows Phone App
+index.text.loggedin = You are logged in as:
 
 moderators.label.name = Name
 moderators.label.firstName = First name
 moderators.label.lastName = Last name
 
 login.label.heading = Please sign in
-login.label.email = Email address
+login.label.username = Username
 login.label.password = Password
 login.button.login = Sign in
