Translator added (retrieve internationalized Strings from servlets)

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -17,3 +17,4 @@ login.label.heading = Please sign in
 login.label.username = Username
 login.label.password = Password
 login.button.login = Sign in
+login.message.failed = The username or password is invalid.
