--- a/resources/text.properties
+++ b/resources/text.properties
@@ -7,7 +7,7 @@ index.text.app.android = Get the App for Android from the Google Play Store.
 index.button.app.android = Get Android App
 index.text.app.windowsPhone = Get the App for Windows Phone from the Windows Store.
 index.button.app.windowsPhone = Get Windows Phone App
-index.text.loggedin = You are logged in as:
+index.text.loggedIn = You are logged in as:
 
 moderators.label.name = Name
 moderators.label.firstName = First name
@@ -17,4 +17,8 @@ login.label.heading = Please sign in
 login.label.username = Username
 login.label.password = Password
 login.button.login = Sign in
-login.message.failed = The username or password is invalid.
+login.message.error.credentials = The username or password is invalid.
+login.message.error.locked = The account is locked.
+login.message.error.deleted = The account doesn't exist anymore.
+
+general.message.error.failed = The request failed. Please try again.
