Header and footer added to error pages. Header updated.

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -21,4 +21,6 @@ login.message.error.credentials = The username or password is invalid.
 login.message.error.locked = The account is locked.
 login.message.error.deleted = The account doesn't exist anymore.
 
-general.message.error.failed = The request failed. Please try again.
+general.message.error.fatal = Sorry, the request failed. Please try again.
+general.message.error.notFound = Sorry, but we couldn't find that resource.
+general.message.error.forbidden = Sorry, but you are not allowed to perform this action.
