--- a/resources/text.properties
+++ b/resources/text.properties
@@ -21,6 +21,8 @@ login.message.error.credentials = The username or password is invalid.
 login.message.error.locked = The account is locked.
 login.message.error.deleted = The account doesn't exist anymore.
 
-general.message.error.fatal = Sorry, the request failed. Please try again.
+general.message.error.failed = The request failed. Please try again.
+general.message.error.sessionExpired = Your session has expired. You need to log in again.
+general.message.error.requiresLogin = You need to login in order to perform this action.general.message.error.fatal = Sorry, the request failed. Please try again.
 general.message.error.notFound = Sorry, but we couldn't find that resource.
 general.message.error.forbidden = Sorry, but you are not allowed to perform this action.
