Header and texts updated. Navigation changes after login.

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -1,5 +1,9 @@
 header.nav.button.login = Sign in
 header.nav.button.logout = Sign out
+header.nav.label.accounts = System accounts
+header.nav.label.applications = Applications
+header.nav.label.myChannels = My channels
+header.nav.label.admin = Administrator
 
 index.welcome = Welcome to the University News Ulm Web Client!
 index.text.app = The University News Ulm App is available for Android and Windows Phone.
