Added register page. Added action for GET request on register page. Added button to navigate to register page in login page. Designed register page. However, functionality for the registration process itself is still missing.

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -24,9 +24,36 @@ login.button.login = Sign in
 login.message.error.credentials = The username or password is invalid.
 login.message.error.locked = The account is locked.
 login.message.error.deleted = The account doesn't exist anymore.
+login.noaccount.heading = No account?
+login.noaccount.description = Do you want to create an moderator account for University News?
+login.noaccount.button.label = Register
+
+register.heading = Create moderator account
+register.description = Please fill in the required data in order to create a moderator account. After submitting the \
+  data, the account request will be checked. The motiviation field is for a description of the reasons for your \
+  account request. A good motiviation increses the chances of a successful account request. You will be \
+  notified about the status of the request via email. Once your account request got accepted, you can start using \
+  University News as a moderator.
+register.form.label.name = Username
+register.form.label.name.desc = Enter username
+register.form.label.firstname = First name
+register.form.label.firstname.desc = Enter first name
+register.form.label.lastname = Last name
+register.form.label.lastname.desc = Enter last name
+register.form.label.email = Email
+register.form.label.email.desc = Enter email
+register.form.label.password = Password
+register.form.label.password.desc = 1234
+register.form.label.reenterpassword = Confirm password
+register.form.label.reenterpassword.desc = 5678
+register.form.label.motivation = Motivation
+register.form.label.motivation.desc = Enter motivation
+register.form.button = Send account request
 
 general.message.error.failed = The request failed. Please try again.
 general.message.error.sessionExpired = Your session has expired. You need to log in again.
-general.message.error.requiresLogin = You need to login in order to perform this action.general.message.error.fatal = Sorry, the request failed. Please try again.
+general.message.error.requiresLogin = You need to login in order to perform this action.
+general.message.error.fatal = Sorry, the request failed. Please try again.
 general.message.error.notFound = Sorry, but we couldn't find that resource.
 general.message.error.forbidden = Sorry, but you are not allowed to perform this action.
+
