Added post register functionality. Added entry to RequestDispatcher. Performed registration of action in ActionFactory. Added RegisterAction class and implemented validation logic. Modified register.jsp to support validation errors and parameter transfer across several requests that fail with validation errors.

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -43,9 +43,9 @@ register.form.label.lastname.desc = Enter last name
 register.form.label.email = Email
 register.form.label.email.desc = Enter email
 register.form.label.password = Password
-register.form.label.password.desc = 1234
+register.form.label.password.desc = Enter password
 register.form.label.reenterpassword = Confirm password
-register.form.label.reenterpassword.desc = 5678
+register.form.label.reenterpassword.desc = Enter password again
 register.form.label.motivation = Motivation
 register.form.label.motivation.desc = Enter motivation
 register.form.button = Send account request
