Fixed >= Bug in getErrorResponse in API. Status can now also be 400. Added sendCreateAccountRequest method to ModeratorAPI. Added register entries /register to RequestDispatcher. Added checks to prevent problems when URL path contains .jsp and parameter information. Same is done in ActionFactory where .jsp and parameter info could also result in problems. Added validationMessages in RegisterAction. Added request execution to server and handling of potential APIExceptions. Added hashing method. Added validation messages in register.jsp

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -28,6 +28,7 @@ login.noaccount.heading = No account?
 login.noaccount.description = Do you want to create an moderator account for University News?
 login.noaccount.button.label = Register
 
+register.info.success = Account created successfully.
 register.heading = Create moderator account
 register.description = Please fill in the required data in order to create a moderator account. After submitting the \
   data, the account request will be checked. The motiviation field is for a description of the reasons for your \
@@ -49,6 +50,26 @@ register.form.label.reenterpassword.desc = Enter password again
 register.form.label.motivation = Motivation
 register.form.label.motivation.desc = Enter motivation
 register.form.button = Send account request
+register.form.validationError.invalidName = The entered username is not valid. Please make sure the name is at least \
+  3 characters long and does not exceed a size of 35 characters. The username must not contain special characters.
+register.form.validationError.missingName = The username must be set.
+register.form.validationError.nameAlreadyExists = The username already exists within the system. Names of moderators \
+  should be unique. We ask you to change your username once again.
+register.form.validationError.invalidFirstName = The entered first name is not valid. Please make sure the entered \
+  name does not exceed 45 characters.
+register.form.validationError.missingFirstName = Please provide your first name.
+register.form.validationError.invalidLastName = The entered last name is not valid. Please make sure the entered name \
+   does not exceed 45 characters.
+register.form.validationError.missingLastName = Please provide your last name.
+register.form.validationError.invalidEmail = The entered email address is not valid.
+register.form.validationError.missingEmail = Please provide your email address. It is required to perform the account \
+   request.
+register.form.validationError.missingPassword = Please enter a password for your account.
+register.form.validationError.passwordMismatch = The entered passwords in both input fields do not match.
+register.form.validationError.invalidMotivation = The entered motivation is not valid since it exceeds the length of \
+   300 characters.
+register.form.validationError.missingMotivation = Please provide your motivation.
+register.form.validationError.general.rejected = Rejected by the server. Please check your input again.
 
 general.message.error.failed = The request failed. Please try again.
 general.message.error.sessionExpired = Your session has expired. You need to log in again.
@@ -56,4 +77,5 @@ general.message.error.requiresLogin = You need to login in order to perform this
 general.message.error.fatal = Sorry, the request failed. Please try again.
 general.message.error.notFound = Sorry, but we couldn't find that resource.
 general.message.error.forbidden = Sorry, but you are not allowed to perform this action.
+general.alert.success = Success!
 
