Implementation of moderator applications page started. Navigation updated. Footer disabled. Texts updated.

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -4,6 +4,11 @@ header.nav.label.accounts = System accounts
 header.nav.label.applications = Applications
 header.nav.label.myChannels = My channels
 header.nav.label.admin = Administrator
+header.nav.label.admin.applications = Account applications
+header.nav.label.admin.accounts = System accounts
+header.nav.label.admin.groups = All groups
+header.nav.label.admin.channels = All channels
+header.nav.label.myAccount = My account
 
 index.welcome = Welcome to the University News Ulm Web Client!
 index.text.app = The University News Ulm App is available for Android and Windows Phone.
@@ -12,10 +17,6 @@ index.button.app.android = Get Android App
 index.text.app.windowsPhone = Get the App for Windows Phone from the Windows Store.
 index.button.app.windowsPhone = Get Windows Phone App
 index.text.loggedIn = You are logged in as:
-
-moderators.label.name = Name
-moderators.label.firstName = First name
-moderators.label.lastName = Last name
 
 login.label.heading = Please sign in
 login.label.username = Username
@@ -31,23 +32,18 @@ login.noaccount.button.label = Register
 register.info.success = Account created successfully.
 register.heading = Create moderator account
 register.description = Please fill in the required data in order to create a moderator account. After submitting the \
-  data, the account request will be checked. The motiviation field is for a description of the reasons for your \
-  account request. A good motiviation increses the chances of a successful account request. You will be \
-  notified about the status of the request via email. Once your account request got accepted, you can start using \
-  University News as a moderator.
-register.form.label.name = Username
+  data, the account application will be checked. The motivation field is for a description of the reasons for your \
+  account request. A good motivation increases the chances of a successful account application. You will be \
+  notified about the status of the request via email. Once your account application got accepted, you can start using \
+  University News Ulm as a moderator.
 register.form.label.name.desc = Enter username
-register.form.label.firstname = First name
 register.form.label.firstname.desc = Enter first name
-register.form.label.lastname = Last name
 register.form.label.lastname.desc = Enter last name
-register.form.label.email = Email
 register.form.label.email.desc = Enter email
 register.form.label.password = Password
 register.form.label.password.desc = Enter password
 register.form.label.reenterpassword = Confirm password
 register.form.label.reenterpassword.desc = Enter password again
-register.form.label.motivation = Motivation
 register.form.label.motivation.desc = Enter motivation
 register.form.button = Send account request
 register.form.validationError.invalidName = The entered username is not valid. Please make sure the name is at least \
@@ -78,4 +74,19 @@ general.message.error.fatal = Sorry, the request failed. Please try again.
 general.message.error.notFound = Sorry, but we couldn't find that resource.
 general.message.error.forbidden = Sorry, but you are not allowed to perform this action.
 general.alert.success = Success!
+
+moderator.name = Username
+moderator.email = Email
+moderator.motivation = Motivation
+moderator.lastname = Last name
+moderator.firstname = First name
+
+application.title = Account applications
+application.info = This page lists all pending account applications. They are sorted in descending order by last name. \
+  Please review the applications. Then accept or decline the applications.
+application.list.heading = Applicants
+application.accept = Accept
+application.decline = Decline
+application.nodata = No applications found
+application.nodata.info = There are no pending account applications.
 
