Moderator applications page finished. Load, accept (unlock) and decline (delete) moderator applications implemented. Author of all classes changed to both Matthias Mak and Philipp Speidel. Texts updated.

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -80,6 +80,7 @@ moderator.email = Email
 moderator.motivation = Motivation
 moderator.lastname = Last name
 moderator.firstname = First name
+moderator.notfound = Sorry, but we couldn't find that moderator resource.
 
 application.title = Account applications
 application.info = This page lists all pending account applications. They are sorted in descending order by last name. \
@@ -89,4 +90,7 @@ application.accept = Accept
 application.decline = Decline
 application.nodata = No applications found
 application.nodata.info = There are no pending account applications.
+application.none = None
+application.accept.success = The account application of {0} has been accepted.
+application.decline.success = The account application of {0} has been declined.
 
