Added resetPassword method to ModeratorAPI. Added LoadPasswordResetAction and ResetPasswordAction implementations. Added page resetPassword and modified login page. Registered actions and pages in factory and dispatcher. However, functionality is not yet tested!

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -28,6 +28,16 @@ login.message.error.deleted = The account doesn't exist anymore.
 login.noaccount.heading = No account?
 login.noaccount.description = Do you want to create an moderator account for University News?
 login.noaccount.button.label = Register
+login.passwordReset.description = Have you forgotten your password?
+login.passwordReset.description.link = Reset password
+
+resetPassword.heading = Reset password
+resetPassword.description = If you have forgotten your password, you can reset it here. Please provide the username \
+  which is assigned to your account. The system will respond by sending an email to the address that is associated \
+  with your account. The email contains a new password which enables your to perform the login process. However, you \
+  should change this password as soon as possible.
+resetPassword.resetButton.label = Reset password
+resetPassword.failure.accountNotFound = There is no account associated with this username.
 
 register.info.success = Account created successfully.
 register.heading = Create moderator account
