Implementation of accounts page started. Actions moved to actions package. Header updated: Register link added. Bootstrap confirmation library added. Texts for accounts page created.

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -104,3 +104,14 @@ application.none = None
 application.accept.success = The account application of {0} has been accepted.
 application.decline.success = The account application of {0} has been declined.
 
+accounts.title = System accounts
+accounts.info = This page lists all moderator accounts of the system. They are sorted in descending order by last \
+  name. You may lock or delete a moderator account by clicking the respective button.
+accounts.list.heading = Accounts
+accounts.lock= Lock
+accounts.delete = Delete
+accounts.nodata = No accounts found
+accounts.nodata.info = There are no moderator accounts in the system.
+accounts.none = None
+accounts.lock.success = The account of {0} has been locked.
+accounts.delete.success = The account of {0} has been deleted.
