Confirmation on delete added to accounts page. FrontController moved to correct package. Log4j logging path changed to ...WebClient

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -84,6 +84,10 @@ general.message.error.fatal = Sorry, the request failed. Please try again.
 general.message.error.notFound = Sorry, but we couldn't find that resource.
 general.message.error.forbidden = Sorry, but you are not allowed to perform this action.
 general.alert.success = Success!
+general.confirmation.title = Are you sure?
+general.confirmation.
+general.confirmation.yes = Yes
+general.confirmation.no = No
 
 moderator.name = Username
 moderator.email = Email
@@ -106,7 +110,8 @@ application.decline.success = The account application of {0} has been declined.
 
 accounts.title = System accounts
 accounts.info = This page lists all moderator accounts of the system. They are sorted in descending order by last \
-  name. You may lock or delete a moderator account by clicking the respective button.
+  name. You may lock or delete a moderator account by clicking the respective button. Deleted accounts cannot be \
+  restored!
 accounts.list.heading = Accounts
 accounts.lock= Lock
 accounts.delete = Delete
