Completed password reset functionality. Added the error handling case of email failure to the reset password action.  Modified the passwordReset.jsp. Added a general connection failure error handling in the frontController. However, this just forwards to a simple view at the moment (connectionFailure.jsp). Added connection failure handling to register action. Enables to remain on register page while keeping all entered form data. For this purpose, added the CONNECTION_FAILURE and CONNECTION_FAILURE_STATUS constants. Mapping connection failures to this status in the API methods. Added response code status field to APIException, so that the returned response code of a request can also be passed to the action objects.

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -38,6 +38,11 @@ resetPassword.description = If you have forgotten your password, you can reset i
   should change this password as soon as possible.
 resetPassword.resetButton.label = Reset password
 resetPassword.failure.accountNotFound = There is no account associated with this username.
+resetPassword.form.label.name.desc = Enter username
+resetPassword.info.success = Password reset executed successfully. Your new password was sent to you via email.
+resetPassword.info.failure = Failed to reset password.
+resetPassword.failure.emailFailure = Could not send email to provided mail address.
+
 
 register.info.success = Account created successfully.
 register.heading = Create moderator account
@@ -76,7 +81,11 @@ register.form.validationError.invalidMotivation = The entered motivation is not 
    300 characters.
 register.form.validationError.missingMotivation = Please provide your motivation.
 register.form.validationError.general.rejected = Rejected by the server. Please check your input again.
+register.info.connectionFailure = The creation of the account failed. The connection to the server could not be \
+  established. The server might be offline at the moment. Please try again later.
 
+general.message.error.connectionFailure = The request has failed due to a connection failure. The server seems to be \
+  unavailable. Please try again later.
 general.message.error.failed = The request failed. Please try again.
 general.message.error.sessionExpired = Your session has expired. You need to log in again.
 general.message.error.requiresLogin = You need to login in order to perform this action.
@@ -84,6 +93,7 @@ general.message.error.fatal = Sorry, the request failed. Please try again.
 general.message.error.notFound = Sorry, but we couldn't find that resource.
 general.message.error.forbidden = Sorry, but you are not allowed to perform this action.
 general.alert.success = Success!
+general.alert.failure = Failure!
 general.confirmation.title = Are you sure?
 general.confirmation.
 general.confirmation.yes = Yes
