Confirmation on delete implemented without bootstrap-confirmation to accounts page. bootstrap-confirmation library deleted.

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -95,13 +95,13 @@ general.message.error.forbidden = Sorry, but you are not allowed to perform this
 general.alert.success = Success!
 general.alert.failure = Failure!
 general.confirmation.title = Are you sure?
-general.confirmation.
-general.confirmation.yes = Yes
-general.confirmation.no = No
+general.yes = Yes
+general.no = No
 
 moderator.name = Username
 moderator.email = Email
 moderator.motivation = Motivation
+moderator.isAdmin = Administrator rights
 moderator.lastname = Last name
 moderator.firstname = First name
 moderator.notfound = Sorry, but we couldn't find that moderator resource.
@@ -121,7 +121,8 @@ application.decline.success = The account application of {0} has been declined.
 accounts.title = System accounts
 accounts.info = This page lists all moderator accounts of the system. They are sorted in descending order by last \
   name. You may lock or delete a moderator account by clicking the respective button. Deleted accounts cannot be \
-  restored!
+  restored.
+accounts.warning.delete = Deleted accounts cannot be restored!
 accounts.list.heading = Accounts
 accounts.lock= Lock
 accounts.delete = Delete
