Confirmation on decline added to applications page.

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -117,6 +117,7 @@ application.nodata.info = There are no pending account applications.
 application.none = None
 application.accept.success = The account application of {0} has been accepted.
 application.decline.success = The account application of {0} has been declined.
+application.warning.decline = If you decline the application it will be deleted. It cannot be restored!
 
 accounts.title = System accounts
 accounts.info = This page lists all moderator accounts of the system. They are sorted in descending order by last \
