Added the ChannelAPI class. Added UTF-8 encoding in methods returning the server's responses. Implemented LoadMyChannelsAction and provided myChannels page. Implemented logic to load channels that are managed by the logged in moderator. Modified Channel and Lecture calls to provide localized strings for channel type and faculty. Slightly modified header.jsp to hide "Logged in as ..." statement when viewport is too small.

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -132,3 +132,40 @@ accounts.nodata.info = There are no moderator accounts in the system.
 accounts.none = None
 accounts.lock.success = The account of {0} has been locked.
 accounts.delete.success = The account of {0} has been deleted.
+
+myChannels.title = My channels
+myChannels.info = This page lists all the channels under your administration. You can check the channel info and \
+  alter it. You are also able to add or remove responsible moderators from a channel.
+myChannels.list.heading = Channels
+myChannels.none = None
+myChannels.nodata = No channels found
+myChannels.nodata.info = You are not responsible for any channels.
+myChannel.panel.channelType = Channel type
+myChannel.panel.term = Term
+myChannel.panel.locations = Locations
+myChannel.panel.dates = Dates
+myChannel.panel.contactInformation = Contact
+myChannel.panel.website = Website
+myChannel.panel.creationDate = Creation date
+myChannel.panel.modificationDate = Modification date
+myChannel.panel.description = Description
+myChannel.panel.lecture.lecturer = Lecturer
+myChannel.panel.lecture.assistant = Assistant
+myChannel.panel.lecture.startDate = Start date
+myChannel.panel.lecture.endDate = End date
+myChannel.panel.lecture.faculty = Faculty
+myChannel.panel.event.cost = Cost
+myChannel.panel.event.organizer = Organizer
+myChannel.panel.sports.cost = Cost
+myChannel.panel.sports.numberOfParticipants = Number of participants
+
+general.faculty.computerScienceAndEngineering = Faculty of Engineering, Computer Science and Psychology
+general.faculty.mathematicsAndEconomics = Faculty of Mathematics and Economics
+general.faculty.medicines = Faculty of Medicine
+general.faculty.naturalSciences = Faculty of Natural Sciences
+
+general.channelType.lecture = Lecture
+general.channelType.event = Event
+general.channelType.sports = Sports group
+general.channelType.other = Other
+general.channelType.studentGroup = Student group
