Add and remove admin rights implemented on applications page. Header updated to show missing navi links if not logged in as administrator.

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -132,6 +132,10 @@ accounts.nodata.info = There are no moderator accounts in the system.
 accounts.none = None
 accounts.lock.success = The account of {0} has been locked.
 accounts.delete.success = The account of {0} has been deleted.
+accounts.adminRights.add = Add administrator rights
+accounts.adminRights.remove = Remove administrator rights
+accounts.adminRights.add.success = Administrator rights have been added to the account of {0}.
+accounts.adminRights.remove.success = Administrator rights have been removed from the account of {0}.
 
 myChannels.title = My channels
 myChannels.info = This page lists all the channels under your administration. You can check the channel info and \
