Groups page added. GroupAPI, GroupUtil and (modified) Group data class and GroupType created. Actions created. Texts updated.

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -97,6 +97,12 @@ general.alert.failure = Failure!
 general.confirmation.title = Are you sure?
 general.yes = Yes
 general.no = No
+general.delete = Delete
+general.none = None
+general.term = Term
+general.creationDate = Creation date
+general.modificationDate = Modification date
+general.description = Description
 
 moderator.name = Username
 moderator.email = Email
@@ -114,7 +120,6 @@ application.accept = Accept
 application.decline = Decline
 application.nodata = No applications found
 application.nodata.info = There are no pending account applications.
-application.none = None
 application.accept.success = The account application of {0} has been accepted.
 application.decline.success = The account application of {0} has been declined.
 application.warning.decline = If you decline the application it will be deleted. It cannot be restored!
@@ -125,11 +130,9 @@ accounts.info = This page lists all moderator accounts of the system. They are s
   restored.
 accounts.warning.delete = Deleted accounts cannot be restored!
 accounts.list.heading = Accounts
-accounts.lock= Lock
-accounts.delete = Delete
+accounts.lock = Lock
 accounts.nodata = No accounts found
 accounts.nodata.info = There are no moderator accounts in the system.
-accounts.none = None
 accounts.lock.success = The account of {0} has been locked.
 accounts.delete.success = The account of {0} has been deleted.
 accounts.adminRights.add = Add administrator rights
@@ -145,14 +148,10 @@ myChannels.none = None
 myChannels.nodata = No channels found
 myChannels.nodata.info = You are not responsible for any channels.
 myChannel.panel.channelType = Channel type
-myChannel.panel.term = Term
 myChannel.panel.locations = Locations
 myChannel.panel.dates = Dates
 myChannel.panel.contactInformation = Contact
 myChannel.panel.website = Website
-myChannel.panel.creationDate = Creation date
-myChannel.panel.modificationDate = Modification date
-myChannel.panel.description = Description
 myChannel.panel.lecture.lecturer = Lecturer
 myChannel.panel.lecture.assistant = Assistant
 myChannel.panel.lecture.startDate = Start date
@@ -173,3 +172,19 @@ general.channelType.event = Event
 general.channelType.sports = Sports group
 general.channelType.other = Other
 general.channelType.studentGroup = Student group
+
+groups.title = Groups
+groups.info = This page lists all the groups of the system. They are sorted in descending order by group name. You can \
+  check the group info. You are also able to delete a group if there is a sufficient reason.
+groups.warning.delete = Deleted groups cannot be restored!
+groups.list.heading = Groups
+groups.nodata = No groups found
+groups.nodata.info = There are no groups in the system.
+groups.delete.success = The group {0} has been deleted.
+
+group.type = Group type
+group.type.tutorial = Tutorial group
+group.type.working = Working group
+group.admin = Group administrator
+group.notfound = Sorry, but we couldn't find that group resource.
+
