--- a/resources/text.properties
+++ b/resources/text.properties
@@ -92,7 +92,13 @@ general.message.error.requiresLogin = You need to login in order to perform this
 general.message.error.fatal = Sorry, the request failed. Please try again.
 general.message.error.notFound = Sorry, but we couldn't find that resource.
 general.message.error.forbidden = Sorry, but you are not allowed to perform this action.
+general.message.error.channelNotFound = The channel could not be found. Please reload the channel resources. It is \
+  possible that the channel resource has been deleted.
+general.message.error.moderatorNotFound = The specified moderator resource could not be found.
+general.message.error.databaseFailure = Something went wrong while accessing the database on the server. Please try \
+  again. If the error remains, contact an administrator.
 general.alert.success = Success!
+general.alert.success.info = Operation performed successfully.
 general.alert.failure = Failure!
 general.confirmation.title = Are you sure?
 general.yes = Yes
@@ -103,6 +109,7 @@ general.term = Term
 general.creationDate = Creation date
 general.modificationDate = Modification date
 general.description = Description
+general.cancel = Cancel
 
 moderator.name = Username
 moderator.email = Email
@@ -161,6 +168,46 @@ myChannel.panel.event.cost = Cost
 myChannel.panel.event.organizer = Organizer
 myChannel.panel.sports.cost = Cost
 myChannel.panel.sports.numberOfParticipants = Number of participants
+myChannels.button.alterChannelData = Edit channel data
+myChannels.button.alterChannelModerators = Manage moderators
+myChannels.button.deleteChannel = Delete channel
+
+manageChannelModerators.title = Manage moderators
+manageChannelModerators.info = This page enables you to manage the responsible moderators of a certain channel. \
+  Moderators can be added or removed from the set of responsible moderators.
+manageChannelModerators.info.selectedChannel = The following list contains the responsible moderators for the channel:
+manageChannelModerators.info.addModerator = Do you want to add a moderator as a responsible person for this channel?
+manageChannelModerators.list.heading = Moderators
+manageChannelModerators.none = No moderators
+manageChannelModerators.nodata = No responsible moderators found
+manageChannelModerators.nodata.info = List does not contain moderator information
+manageChannelModerators.panel.firstName = First name
+manageChannelModerators.panel.lastName = Last name
+manageChannelModerators.panel.email = Email
+manageChannelModerators.panel.active = Active status
+manageChannelModerators.panel.active.true = The moderator is actively responsible for the channel.
+manageChannelModerators.panel.active.false = The moderator is currently not actively responsible for the channel.
+manageChannelModerators.confirmation.reactivate = Do you really want to change the status of this moderator to active \
+  again? The moderator is then able to actively perform operations on the channel.
+manageChannelModerators.confirmation.revoke = Do you really want to revoke the management privileges for this \
+  channel? The selected moderator is then no longer capable of performing operations on the channel.
+manageChannelModerators.confirmation.button.revoke = Revoke privileges
+manageChannelModerators.confirmation.button.reactivate = Reactivate
+manageChannelModerators.button.addModerator = Add moderator
+manageChannelModerators.dialog.addModerator.title = Add a moderator to channel
+manageChannelModerators.dialog.addModerator.description = Please enter the username of the moderator you want to add \
+  to the channel.
+manageChannelModerators.dialog.addModerator.inputfield.label = Moderator username
+manageChannelModerators.dialog.addModerator.inputfield.placeholder = Enter username of moderator
+manageChannelModerators.dialog.addModerator.submitButton.label = Add moderator
+manageChannelModerators.moderatorForbidden.moderatorAmount = A channel needs to have at least one active moderator. \
+  If there is only one active moderator, the privileges can not be revoked.
+manageChannelModerators.moderatorNotFound = There seems to be no moderator with the name you provided. Cannot \
+  perform operation.
+manageChannelModerators.channelNotFound = The specified channel could not be found on the server. You should try to \
+  reload the channel resources and try again.
+manageChannelModerators.channelDataIncomplete = Please provide a name for the moderator that should be added.
+
 
 general.faculty.computerScienceAndEngineering = Faculty of Engineering, Computer Science and Psychology
 general.faculty.mathematicsAndEconomics = Faculty of Mathematics and Economics
