Added delete channel functionality. Herefore added MyChannelsAction class and implemented Action interface. Added delete channel method in ChannelAPI. Changed scope of moderatorId variable in accounts.jso to request scope.

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -171,6 +171,7 @@ myChannel.panel.sports.numberOfParticipants = Number of participants
 myChannels.button.alterChannelData = Edit channel data
 myChannels.button.alterChannelModerators = Manage moderators
 myChannels.button.deleteChannel = Delete channel
+myChannels.warning.delete = Do you really want to delete the channel {0}? This cannot be undone.
 
 manageChannelModerators.title = Manage moderators
 manageChannelModerators.info = This page enables you to manage the responsible moderators of a certain channel. \
