--- a/resources/text.properties
+++ b/resources/text.properties
@@ -171,6 +171,7 @@ myChannel.panel.sports.numberOfParticipants = Number of participants
 myChannels.button.alterChannelData = Edit channel data
 myChannels.button.alterChannelModerators = Manage moderators
 myChannels.button.deleteChannel = Delete channel
+myChannels.button.announcements = Announcements
 myChannels.warning.delete = Do you really want to delete the channel {0}? This cannot be undone.
 
 channelDetails.title = Channel details
