Changed input field of announcement content in creation dialog to textarea. Performed some renaming of string keys.

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -174,36 +174,36 @@ myChannels.button.deleteChannel = Delete channel
 myChannels.button.announcements = Announcements
 myChannels.warning.delete = Do you really want to delete the channel {0}? This cannot be undone.
 
-channelDetails.title = Channel details
-channelDetails.info = The page lists all the messages of the channel. New messages can be sent to the subscribers. \
+announcements.title = Channel details
+announcements.info = The page lists all the messages of the channel. New messages can be sent to the subscribers. \
   Furthermore, the page offers the possibility to edit the channel data.
-channelDetails.messages.panel.header = Announcements
-channelDetails.details.panel.header = Channel details
-channelDetails.noAnnouncements = No announcements have been sent so far.
-channelDetails.button.newMessage = New announcement
-channelDetails.dialog.newMessage.header = Send new announcement
-channelDetails.dialog.newMessage.description = Please enter the message that should be distributed to the subscribers\
+announcements.messages.panel.header = Announcements
+announcements.details.panel.header = Channel details
+announcements.noAnnouncements = No announcements have been sent so far.
+announcements.button.newMessage = New announcement
+announcements.dialog.newMessage.header = Send new announcement
+announcements.dialog.newMessage.description = Please enter the message that should be distributed to the subscribers\
   . You can define the priority of the announcement. Depending on the priority, the subscribers might be notified \
   differently about the new announcement.
-channelDetails.dialog.newMessage.textField.label = Message content
-channelDetails.dialog.newMessage.textField.placeholder = Enter text
-channelDetails.dialog.newMessage.priorityComboBox.label = Priority
-channelDetails.dialog.newMessage.priorityComboBox.value.normal = Normal
-channelDetails.dialog.newMessage.priorityComboBox.value.high = High
-channelDetails.dialog.newMessage.submitButton.label = Send
-channelDetails.dialog.newMessage.title.textField.label = Title
-channelDetails.dialog.newMessage.title.textField.placeholder = Enter title
-channelDetails.dialog.newMessage.validation.announcementTitle.empty = Please enter a title for the announcement.
-channelDetails.dialog.newMessage.validation.announcementText.empty = Please enter a message.
-channelDetails.dialog.newMessage.validation.announcementTitle.length = The entered title exceeds the maximum of 45 \
+announcements.dialog.newMessage.textField.label = Message content
+announcements.dialog.newMessage.textField.placeholder = Enter text
+announcements.dialog.newMessage.priorityComboBox.label = Priority
+announcements.dialog.newMessage.priorityComboBox.value.normal = Normal
+announcements.dialog.newMessage.priorityComboBox.value.high = High
+announcements.dialog.newMessage.submitButton.label = Send
+announcements.dialog.newMessage.title.textField.label = Title
+announcements.dialog.newMessage.title.textField.placeholder = Enter title
+announcements.dialog.newMessage.validation.announcementTitle.empty = Please enter a title for the announcement.
+announcements.dialog.newMessage.validation.announcementText.empty = Please enter a message.
+announcements.dialog.newMessage.validation.announcementTitle.length = The entered title exceeds the maximum of 45 \
   characters.
-channelDetails.dialog.newMessage.validation.announcementText.length = The entered message exceeds the maximum of 500 \
+announcements.dialog.newMessage.validation.announcementText.length = The entered message exceeds the maximum of 500 \
   characters.
-channelDetails.createAnnouncement.error.generalValidationError = Request was rejected by the server. Please check all\
+announcements.createAnnouncement.error.generalValidationError = Request was rejected by the server. Please check all\
    your entered data.
-channelDetails.createAnnouncement.error.titleInvalid = Request was rejected by the server. Please check the entered \
+announcements.createAnnouncement.error.titleInvalid = Request was rejected by the server. Please check the entered \
   title.
-channelDetails.createAnnouncement.error.textInvalid = Request was rejected by the server. Please check the entered \
+announcements.createAnnouncement.error.textInvalid = Request was rejected by the server. Please check the entered \
   text.
 
 manageChannelModerators.title = Manage moderators
