Started to implement edit channel details functionality. Adapted the channelDetails page. Added the LoadChannelDetailsAction class and started to implement it. Implemented the getChannel method in the channelAPI. Added mappings to the request dispatcher and action factory.

--- a/resources/text.properties
+++ b/resources/text.properties
@@ -154,6 +154,7 @@ myChannels.list.heading = Channels
 myChannels.none = None
 myChannels.nodata = No channels found
 myChannels.nodata.info = You are not responsible for any channels.
+myChannel.panel.channelName = Channel name
 myChannel.panel.channelType = Channel type
 myChannel.panel.locations = Locations
 myChannel.panel.dates = Dates
@@ -174,9 +175,8 @@ myChannels.button.deleteChannel = Delete channel
 myChannels.button.announcements = Announcements
 myChannels.warning.delete = Do you really want to delete the channel {0}? This cannot be undone.
 
-announcements.title = Channel details
-announcements.info = The page lists all the messages of the channel. New messages can be sent to the subscribers. \
-  Furthermore, the page offers the possibility to edit the channel data.
+announcements.title = Announcements of channel
+announcements.info = The page lists all the announcements of the channel. New messages can be sent to the subscribers.
 announcements.messages.panel.header = Announcements
 announcements.details.panel.header = Channel details
 announcements.noAnnouncements = No announcements have been sent so far.
@@ -205,6 +205,10 @@ announcements.createAnnouncement.error.titleInvalid = Request was rejected by th
   title.
 announcements.createAnnouncement.error.textInvalid = Request was rejected by the server. Please check the entered \
   text.
+
+channelDetails.title = Channel details
+channelDetails.info = You can modify the data of the channel. Please make sure to provide all mandatory data.
+channelDetails.submitButton.label = Save changes
 
 manageChannelModerators.title = Manage moderators
 manageChannelModerators.info = This page enables you to manage the responsible moderators of a certain channel. \
@@ -253,6 +257,9 @@ general.channelType.event = Event
 general.channelType.sports = Sports group
 general.channelType.other = Other
 general.channelType.studentGroup = Student group
+
+general.term.summer = Summer
+general.term.winter = Winter
 
 groups.title = Groups
 groups.info = This page lists all the groups of the system. They are sorted in descending order by group name. You can \
